--- a/TeusUI/index.html
+++ b/TeusUI/index.html
@@ -15,7 +15,7 @@
 <body>
 <section class="home">
     <div id="canvas-background">
-        <h1 class="logo">À la C.art</h1>
+        <h1 class="logo">À la C.art®</h1>
         <nav>
             <h1 class="sliding-text">coding art</h1>
             <div class="container">
